--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Roboto", Arial!important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background: rgb(58,93,180);
+   background: linear-gradient(90deg, rgba(58,93,180,1) 0%, rgba(106,104,235,0.8184523809523809) 50%, rgba(174,197,205,1) 100%);
+  /* background-image: url("/public/icons/01d.png");*/
 }
 
 code {
